objects/ssot__CareRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__RequesterType__c</fullName>
        <label>Requester Type</label>
        <length>40</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requester Type</masterLabel>
            <refAttrDeveloperName>RequesterType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerId__c</fullName>
        <label>Requesting Practitioner</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requesting Practitioner</masterLabel>
            <refAttrDeveloperName>RequestingPractitionerId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerLicenseID__c</fullName>
        <label>Requesting Practitioner License</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requesting Practitioner License</masterLabel>
            <refAttrDeveloperName>RequestingPractitionerLicenseID</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerObject__c</fullName>
        <label>Requesting Practitioner Object</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requesting Practitioner Object</masterLabel>
            <refAttrDeveloperName>RequestingPractitionerObject</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestingPractitionerSpecialty__c</fullName>
        <label>Requesting Practitioner Specialty</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Requesting Practitioner Specialty</masterLabel>
            <refAttrDeveloperName>RequestingPractitionerSpecialty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionDateTime__c</fullName>
        <label>Resolution Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Resolution Date</masterLabel>
            <refAttrDeveloperName>ResolutionDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionDescriptionText__c</fullName>
        <label>Resolution Description</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Resolution Description</masterLabel>
            <refAttrDeveloperName>ResolutionDescriptionText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionLetterSentDateTime__c</fullName>
        <label>Resolution Letter Sent Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Resolution Letter Sent Date</masterLabel>
            <refAttrDeveloperName>ResolutionLetterSentDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionNotesText__c</fullName>
        <label>Resolution Notes</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Resolution Notes</masterLabel>
            <refAttrDeveloperName>ResolutionNotesText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReviewDateTime__c</fullName>
        <label>Review Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Review Date</masterLabel>
            <refAttrDeveloperName>ReviewDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RootCauseNotesText__c</fullName>
        <label>Root Cause Notes</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Root Cause Notes</masterLabel>
            <refAttrDeveloperName>RootCauseNotesText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RqstPrctnrVerbalNtfyDateTime__c</fullName>
        <label>Request Prctnr Verbal Ntfy Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Request Prctnr Verbal Ntfy Date</masterLabel>
            <refAttrDeveloperName>RqstPrctnrVerbalNtfyDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledAdmissionDateTime__c</fullName>
        <label>Scheduled Admission Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Scheduled Admission Date</masterLabel>
            <refAttrDeveloperName>ScheduledAdmissionDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledDischargeDateTime__c</fullName>
        <label>Scheduled Discharge Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Scheduled Discharge Date</masterLabel>
            <refAttrDeveloperName>ScheduledDischargeDateTime</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceDate__c</fullName>
        <label>Service Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Date</masterLabel>
            <refAttrDeveloperName>ServiceDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceLevelType__c</fullName>
        <label>Service Level Type</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Level Type</masterLabel>
            <refAttrDeveloperName>ServiceLevelType</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTypeText__c</fullName>
        <label>Service Type</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Service Type</masterLabel>
            <refAttrDeveloperName>ServiceTypeText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityId__c</fullName>
        <label>Servicing Facility</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Facility</masterLabel>
            <refAttrDeveloperName>ServicingFacilityId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityObject__c</fullName>
        <label>Servicing Facility Object</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Facility Object</masterLabel>
            <refAttrDeveloperName>ServicingFacilityObject</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerId__c</fullName>
        <label>Servicing Practitioner</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Practitioner</masterLabel>
            <refAttrDeveloperName>ServicingPractitionerId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerLicense__c</fullName>
        <label>Servicing Practitioner License</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Practitioner License</masterLabel>
            <refAttrDeveloperName>ServicingPractitionerLicense</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerObject__c</fullName>
        <label>Servicing Practitioner Object</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Practitioner Object</masterLabel>
            <refAttrDeveloperName>ServicingPractitionerObject</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingPractitionerSpecialty__c</fullName>
        <label>Servicing Practitioner Specialty</label>
        <length>36</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Servicing Practitioner Specialty</masterLabel>
            <refAttrDeveloperName>ServicingPractitionerSpecialty</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubscriberMemberIdentifierText__c</fullName>
        <label>Subscriber Member Identifier</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Subscriber Member Identifier</masterLabel>
            <refAttrDeveloperName>SubscriberMemberIdentifierText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmbulanceTransportDistanceNumber__c</fullName>
        <label>Total Ambulance Transport Distance</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Ambulance Transport Distance</masterLabel>
            <refAttrDeveloperName>TotalAmbulanceTransportDistanceNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitofMeasureId__c</fullName>
        <label>Unit of Measure</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Unit of Measure</masterLabel>
            <refAttrDeveloperName>UnitofMeasureId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722507936_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_MemberSecondaryPlanId_ma_rel</label>
        <referenceTo>ssot__MemberPlan__dlm</referenceTo>
        <relationshipLabel>CareRequest_MemberSecondaryPlanId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716722507936_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722518349_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_GeneralPractitionerId_ma_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>CareRequest_GeneralPractitionerId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716722518349_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722523817_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareRequest_RequestingPractitionerId_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>CareRequest_RequestingPractitionerId_rel</relationshipLabel>
        <relationshipName>rel_1716722523817_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Care Request</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Care Request</referenceEntityGroup>
        <referenceEntityName>CareRequest</referenceEntityName>
        <referenceEntitySubjectArea>Care Request</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>